# qtextpdfextraction

./: qtextpdfextraction.pri
example/: example.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt
src/TextExtraction/: CMakeLists.txt  ErrorsAndWarnings.h  TextExtraction.cpp  TextExtraction.h  qtextpdfextraction.cpp  qtextpdfextraction.h  qtextpdfextraction_global.h
